2004-09-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (enhanced_recursion): Pass unescaped backslash character
	through to PostScript output in enhanced text mode. This is necessary
	for Shift-JIS character encoding to work in enhanced mode (the non-
	enhanced mode already does this). Bug report #998479.

2004-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_tics) src/save.c (save_tics): Show and save
	the tic level of user-specific tics.

2004-07-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Bugfix: caret position of error messages in multiplot modes was
	wrong.
	
	* src/util.c (current_prompt): New variable holding the currently
	used prompt string.
	(PRINT_SPACES_UNDER_PROMPT): Use current_prompt instead of global
	PROMPT macro.  Use a pointer loop instead of a counter.
	(PRINT_SPACES_UNDER_PROMPT, PRINT_SPACES_UPTO_TOKEN): Enclosed
	macro body in do .. while(0).
	(os_error, int_error, int_warn): Use current_prompt instead of
	global macro PROMPT.

	* src/util.h (current_prompt): Declare.

	* src/command.h (PROMPT): Moved this global macro into command.c.

	* src/command.c (PROMPT): Moved macro to here.
	(read_line) [VMS]: Update new global variable current_prompt.
	(read_line) [!VMS]: Likewise.

2004-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Update the "Creator: " tag to report version as 4.0

2004-07-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Add a gsave/grestore pair to the fill operation
	used by pm3d surface quadrangles. This works around a ghostscript
	bug that introduces antialiasing artifacts when displaying in X11.

2004-07-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/fig.trm (FIG_arrow): Use actual linetype variables rather
	than those in FIG_line --- those are only set by FIG_vector, which
	isn't being called by FIG_arrow.

2004-07-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
